# border-queue-optimizer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
config/: simulation.conf
include/: common.h
src/: arrival.c  arrival.h  heap.c  heap.h  main.c  optimizer.c  optimizer.h  predictor.c  predictor.h  queue_model.c  queue_model.h  simulator.c  simulator.h  stats.c  stats.h
tests/: test_heap.c  test_main.c  test_optimizer.c  test_queue_model.c  test_simulator.c
